# openag-risk-twin

./: .env.example  .env.uv  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  render.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  refresh.yml
backend/: __init__.py  main.py  schemas.py  stubs.py
backend/data/: forecast.json  model_card.json
backend/models/: conformal_calibration.joblib
backend/tests/: contract_openapi_snapshot.json  test_contract.py
data/raw/: oce-wasde-report-data-2023-01.csv  oce-wasde-report-data-2023-02.csv  oce-wasde-report-data-2023-03.csv  oce-wasde-report-data-2023-04.csv  oce-wasde-report-data-2023-05.csv  oce-wasde-report-data-2023-06.csv  oce-wasde-report-data-2023-07.csv  oce-wasde-report-data-2023-08.csv  oce-wasde-report-data-2023-09.csv  oce-wasde-report-data-2023-10.csv  oce-wasde-report-data-2023-11.csv  oce-wasde-report-data-2023-12.csv  oce-wasde-report-data-2024-01.csv  oce-wasde-report-data-2024-02.csv  oce-wasde-report-data-2024-03.csv  oce-wasde-report-data-2024-04.csv  oce-wasde-report-data-2024-05.csv  (+23 more)
docs/: PLAN.md  RESEARCH_NOTES.md  SCOPE.md  v2-ideas.md
frontend/: __init__.py  package-lock.json  package.json  tailwind.config.js
notebooks/: 01_regime_analysis.ipynb  02_baselines.ipynb  03_regime_lift.ipynb  04_conformal.ipynb  run_tasks_8_10.py
pipeline/: __init__.py  build_duckdb.py  build_panel.py  check_duckdb.py  generate_forecast.py  healthcheck.py  wsl_populate_wasde.py
scripts/: execute_conformal_tasks.py  populate_wasde.py
tests/: test_backend.py  test_validators.py
(+19 files in other folders)
