[project]
name = "openag-risk-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cot-reports>=0.1.3",
    "curl-cffi>=0.15.0",
    "duckdb>=1.5.3",
    "fredapi>=0.5.2",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
