[project]
name = "openag-risk-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cot-reports>=0.1.3",
    "curl-cffi>=0.15.0",
    "duckdb>=1.5.3",
    "fastapi>=0.104.0",
    "fredapi>=0.5.2",
    "mapie>=1.0.0,<2.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruptures>=1.1.10",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.24.0",
    "xgboost>=3.2.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
